tests/baselines/reference/invalidModuleWithVarStatements.errors.txt
==== tests/cases/compiler/invalidModuleWithVarStatements.ts (6 errors) ====
    // All of these should be an error
    
    module Y {
        public var x: number = 0;
        ~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    }
    
    module Y2 {
        public function fn(x: string) { }
        ~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    }
    
    module Y4 {
        static var x: number = 0;
        ~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    }
    
    module YY {
        static function fn(x: string) { }
        ~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    }
    
    module YY2 {
        private var x: number = 0;
        ~~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    }
    
    
    module YY3 {
        private function fn(x: string) { }
        ~~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    }
    